5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1577_996.log
== TEST (2019-03-14 19:28:50) 
-- CODE:
 print("*****")
print("* o o *")
print("*  ^  *")
print("*--- *")
print("***** ")
-- ERROR:
File "XXXX", line 1
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:28:59) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("*--- *")
print("***** ")
-- OUTPUT:
*****
* o o *
*  ^  *
*--- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:29:09) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("*--- *")
print("*****")
-- EXECUTION TIME:
0.191406
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
*--- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:29:13) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("*--- *")
print("*****")
-- OUTPUT:
*****
* o o *
*  ^  *
*--- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:29:18) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("*--- *")
 print("*****")
-- ERROR:
File "XXXX", line 5
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:29:28) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("*--- *")
print(" *****")
-- OUTPUT:
*****
* o o *
*  ^  *
*--- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:29:36) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("*--- *")
print("*****")
-- OUTPUT:
*****
* o o *
*  ^  *
*--- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:29:44) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
* o o *
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:29:54) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****")
-- EXECUTION TIME:
0.192917
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:29:56) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****")
-- OUTPUT:
*****
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:30:24) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print(" *****")
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:30:43) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****")
-- OUTPUT:
*****
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:30:52) 
-- CODE:
print(" *****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****")
-- OUTPUT:
*****
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:30:55) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****")
-- OUTPUT:
***** 
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:31:26) 
-- CODE:
print("*****")
print(" (* o o *) ")
print("*  ^  *")
print("* --- *")
print(" *****")
-- OUTPUT:
*****
 (* o o *) 
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:31:34) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print(" *****")
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:31:52) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****")
-- OUTPUT:
*****
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:33:16) 
-- CODE:
print(" ****")
print("*o o*")
print("*  ^  *")
print("* --- *")
print(" *****")
-- OUTPUT:
****
*o o*
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:18:59) 
-- CODE:
print("*****")
print("*o o *")
print("* ^ *")
print("* --- *")

-- OUTPUT:
*****
*o o *
* ^ *
* --- *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:19:05) 
-- CODE:
print("*****")
print("*o o *")
print("* ^ *")
print("*--- *")

-- OUTPUT:
*****
*o o *
* ^ *
*--- *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:19:09) 
-- CODE:
print("*****")
print("*o o *")
print("* ^ *")
print("*--- *")

-- EXECUTION TIME:
0.189071
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
*o o *
* ^ *
*--- *
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:19:16) 
-- CODE:
print("*****")
print("*o o *")
print("* ^ *")
print("* --- *")

-- OUTPUT:
*****
*o o *
* ^ *
* --- *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:19:26) 
-- CODE:
print("*****")
print("*o o *")
print("* ^ *")
print("*--- *")

-- OUTPUT:
*****
*o o *
* ^ *
*--- *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:20:59) 
-- CODE:
print("*****")
print("*o o *")
print("* ^ *")
print("*--- *")
       *****
-- ERROR:
File "XXXX", line 5
    *****
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:23:50) 
-- CODE:
print("*****")
print("*o o *")
print("* ^ *")
print("*---*")
print("*****")
-- OUTPUT:
*****
*o o *
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:24:12) 
-- CODE:
print("***** ")
print("*o o *")
print("* ^ *")
print("*---*")
print("*****")
-- EXECUTION TIME:
0.141917
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
*o o *
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:24:15) 
-- CODE:
print("*****")
print("*o o *")
print("* ^ *")
print("*---*")
print("*****")
-- OUTPUT:
*****
*o o *
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:24:20) 
-- CODE:
print("*****")
print("*o o *")
print("* ^ *")
print("*---*")
print("*****")
-- EXECUTION TIME:
0.136702
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
*o o *
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:24:26) 
-- CODE:
print("*****")
print("*o o *")
print("* ^ *")
print("*---*")
print("*****")
-- OUTPUT:
*****
*o o *
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:25:26) 
-- CODE:
print("*****")
print("*(o o * )")
print("* ^ *")
print("*---*")
print("*****")
-- OUTPUT:
*****
*(o o * )
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:25:40) 
-- CODE:
print("*****")
print("(*o o * )")
print("* ^ *")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*o o * )
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:25:48) 
-- CODE:
print("*****")
print("(*o o *)")
print("* ^ *")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*o o *)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:26:04) 
-- CODE:
print("*****")
print("(*o o *)")
print(" * ^ * ")
print(" *---*")
print(" *****")
-- OUTPUT:
*****
(*o o *)
 * ^ * 
 *---*
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:26:15) 
-- CODE:
print("*****")
print("( *o o *)")
print(" * ^ * ")
print(" *---*")
print(" *****")
-- OUTPUT:
*****
( *o o *)
 * ^ * 
 *---*
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:26:23) 
-- CODE:
print("*****")
print("(*o o *)")
print(" * ^ * ")
print(" *---*")
print(" *****")
-- OUTPUT:
*****
(*o o *)
 * ^ * 
 *---*
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:26:30) 
-- CODE:
print("*****")
print("(*o o *)")
print(" * ^ * ")
print(" *---*")
print(" *****")
-- EXECUTION TIME:
0.119319
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(*o o *)
 * ^ * 
 *---*
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:28:58) 
-- CODE:
print("*****")
print("(*o o *)")
print(" * ^ * ")
print(" *---*")
print(" *****")
-- OUTPUT:
*****
(*o o *)
 * ^ * 
 *---*
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:29:11) 
-- CODE:
print("*****")
print("(*o o *)")
print(" * ^ * ")
print(" *---*")
print(" *****")
-- EXECUTION TIME:
0.120825
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(*o o *)
 * ^ * 
 *---*
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:29:13) 
-- CODE:
print("*****")
print("(*o o *)")
print(" * ^ * ")
print(" *---*")
print(" *****")
-- OUTPUT:
*****
(*o o *)
 * ^ * 
 *---*
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:29:26) 
-- CODE:
print("*****")
print("(*o o *)")
print(" * ^ * ")
print("* --- *")
print(" *****")
-- OUTPUT:
*****
(*o o *)
 * ^ * 
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:29:41) 
-- CODE:
print("*****")
print("(*o o *)")
print(" *   ^   * ")
print("* --- *")
print(" *****")
-- OUTPUT:
*****
(*o o *)
 *   ^   * 
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:29:51) 
-- CODE:
print("*****")
print("(*o o *)")
print(" *   ^   * ")
print("*  --- *")
print(" ***** ")
-- OUTPUT:
*****
(*o o *)
 *   ^   * 
*  --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:30:02) 
-- CODE:
print("*****")
print("(*o o *)")
print(" *   ^   * ")
print("*   --- *")
print("  ***** ")
-- OUTPUT:
*****
(*o o *)
 *   ^   * 
*   --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:30:07) 
-- CODE:
print("*****")
print("(*o o *)")
print(" *   ^   * ")
print("*   --- *")
print("   ***** ")
-- OUTPUT:
*****
(*o o *)
 *   ^   * 
*   --- *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:30:13) 
-- CODE:
print("*****")
print("(*o o *)")
print("*   ^   * ")
print("*   --- *")
print("   ***** ")
-- OUTPUT:
*****
(*o o *)
*   ^   * 
*   --- *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:30:21) 
-- CODE:
print("*****")
print("(*o o *)")
print("*   ^   * ")
print("*   ---  *")
print("   ***** ")
-- OUTPUT:
*****
(*o o *)
*   ^   * 
*   ---  *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:30:27) 
-- CODE:
print("*****")
print("(*o o *)")
print("*   ^    * ")
print("*   ---  *")
print("   ***** ")
-- OUTPUT:
*****
(*o o *)
*   ^    * 
*   ---  *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:30:42) 
-- CODE:
print("  ***** ")
print("( *o o * )")
print("*   ^    * ")
print("*   ---  *")
print("   ***** ")
-- OUTPUT:
***** 
( *o o * )
*   ^    * 
*   ---  *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:31:48) 
-- CODE:
print("  *****  ")
print("( *o o * )")
print("*   ^    * ")
print("*   ---  *")
print("  *****   ")
-- OUTPUT:
*****  
( *o o * )
*   ^    * 
*   ---  *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:31:54) 
-- CODE:
print("  *****  ")
print("( *o o * )")
print("*   ^    * ")
print("*   ---  *")
print("   *****   ") 
-- OUTPUT:
*****  
( *o o * )
*   ^    * 
*   ---  *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:32:07) 
-- CODE:
print("  *****  ")
print("(* o o * )")
print("*   ^    * ")
print("*   ---  *")
print("   *****   ") 
-- OUTPUT:
*****  
(* o o * )
*   ^    * 
*   ---  *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:32:18) 
-- CODE:
print("  *****  ")
print("( * o o * )")
print("*   ^    * ")
print("*   ---  *")
print("   *****   ") 
-- OUTPUT:
*****  
( * o o * )
*   ^    * 
*   ---  *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:32:23) 
-- CODE:
print("  *****  ")
print("( * o o * )")
print("*   ^    * ")
print("*   ---  *")
print("   *****   ") 
-- EXECUTION TIME:
0.144414
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****  
( * o o * )
*   ^    * 
*   ---  *
   *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:32:51) 
-- CODE:
print("  *****   ")
print("( * o o * )")
print("*   ^    * ")
print("*   ---   *")
print("   *****   ") 
-- OUTPUT:
*****   
( * o o * )
*   ^    * 
*   ---   *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:32:57) 
-- CODE:
print("  *****   ")
print("( * o o * )")
print("*   ^    * ")
print("*   ---   *")
print("   *****   ") 
-- EXECUTION TIME:
0.14231
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
( * o o * )
*   ^    * 
*   ---   *
   *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:57:47) 
-- CODE:
print(*****)
print(* o o *)
print(*  ^  *)
print(* --- *)
print( ***** )
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:57:59) 
-- CODE:
print( ***** )
print(* o o *)
print(*  ^  *)
print(* --- *)
print( ***** )
-- ERROR:
File "XXXX", line 1
    print( ***** )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:58:33) 
-- CODE:
print(¨*****¨ )
print(* o o *)
print(*  ^  *)
print(* --- *)
print( ***** )
-- ERROR:
File "XXXX", line 1
    print(¨*****¨ )
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:58:44) 
-- CODE:
print(¨***** ¨)
print(* o o *)
print(*  ^  *)
print(* --- *)
print( ***** )
-- ERROR:
File "XXXX", line 1
    print(¨***** ¨)
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:58:52) 
-- CODE:
print(¨***** ¨)
print(* o o *)
print(*  ^  *)
print(* --- *)
print( ***** )
-- ERROR:
File "XXXX", line 1
    print(¨***** ¨)
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:05:06) 
-- CODE:
print(¨***** ¨)
print( * o o * )
print( *  ^  *)
print(* --- *)
print( ***** )
-- ERROR:
File "XXXX", line 1
    print(¨***** ¨)
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:22:16) 
-- CODE:
print(¨***** ¨)
print( * o o * )
print( *  ^  *)
print(* --- *)
print( ***** )
-- ERROR:
File "XXXX", line 1
    print(¨***** ¨)
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:25:20) 
-- CODE:
print(¨*****¨)
print(¨(* o o *) ¨)
print( ¨* ^   *¨   )
print(*   ---  *  )
print(   ***** )
-- ERROR:
File "XXXX", line 1
    print(¨*****¨)
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:25:26) 
-- CODE:
print(¨*****¨)
print(¨(* o o *) ¨)
print( ¨* ^   *¨   )
print(*   ---  *  )
print(   ***** )
-- EXECUTION TIME:
0.14901
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 1
    print(\xa8*****\xa8)
          ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:15) 
-- CODE:
print(¨ *****¨)
print(¨(* o o *) ¨)
print( ¨* ^   *¨   )
print(¨ * ---  * ¨)
print( ¨*****¨ )
-- ERROR:
File "XXXX", line 1
    print(¨ *****¨)
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:26) 
-- CODE:
print(¨ *****¨)
print(¨(* o o *) ¨)
print( ¨* ^   *¨ )
print(¨ * ---  * ¨)
print( ¨*****¨ )
-- ERROR:
File "XXXX", line 1
    print(¨ *****¨)
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:41) 
-- CODE:
print(¨ *****¨)
print(¨(* o o *) ¨)
print(¨* ^   *¨)
print(¨ * --- * ¨)
print( ¨*****¨ )
-- ERROR:
File "XXXX", line 1
    print(¨ *****¨)
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:42) 
-- CODE:
print(¨ *****¨)
print(¨(* o o *) ¨)
print(¨* ^   *¨)
print(¨ * --- * ¨)
print( ¨*****¨ )
-- ERROR:
File "XXXX", line 1
    print(¨ *****¨)
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:28:08) 
-- CODE:
print (¨ *****¨)
print (¨(* o o *) ¨)
print (¨* ^   *¨)
print (¨ * --- * ¨)
print ( ¨*****¨ )
-- ERROR:
File "XXXX", line 1
    print (¨ *****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:28:16) 
-- CODE:
print (¨ *****¨)
print (¨(* o o *) ¨)
print (¨* ^   *¨)
print (¨* --- * ¨)
print ( ¨*****¨ )
-- ERROR:
File "XXXX", line 1
    print (¨ *****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:28:22) 
-- CODE:
print (¨ *****¨)
print (¨(* o o *) ¨)
print (¨* ^   *¨)
print (¨* --- *¨)
print ( ¨*****¨ )
-- ERROR:
File "XXXX", line 1
    print (¨ *****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:28:24) 
-- CODE:
print (¨ *****¨)
print (¨(* o o *) ¨)
print (¨* ^   *¨)
print (¨* --- *¨)
print ( ¨*****¨ )
-- EXECUTION TIME:
0.172685
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 1
    print (\xa8 *****\xa8)
           ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:49:51) 
-- CODE:
print (¨ *****¨)
print ( ¨(* o o *) ¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print ( ¨ ***** ¨ )
-- ERROR:
File "XXXX", line 1
    print (¨ *****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:00) 
-- CODE:
print (¨ *****¨)
print (¨(* o o *) ¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print ( ¨ ***** ¨ )
-- ERROR:
File "XXXX", line 1
    print (¨ *****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:05) 
-- CODE:
print (¨ *****¨)
print (¨(* o o *) ¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨ )
-- ERROR:
File "XXXX", line 1
    print (¨ *****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:08) 
-- CODE:
print (¨ *****¨)
print (¨(* o o *) ¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨ *****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:10) 
-- CODE:
print (¨ *****¨)
print (¨(* o o *)¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨ *****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:13) 
-- CODE:
print (¨*****¨)
print (¨(* o o *)¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨*****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:14) 
-- CODE:
print (¨*****¨)
print (¨(* o o *)¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨*****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:15) 
-- CODE:
print (¨*****¨)
print (¨(* o o *)¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨*****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:15) 
-- CODE:
print (¨*****¨)
print (¨(* o o *)¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨*****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:16) 
-- CODE:
print (¨*****¨)
print (¨(* o o *)¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨*****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:17) 
-- CODE:
print (¨*****¨)
print (¨(* o o *)¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨*****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:17) 
-- CODE:
print (¨*****¨)
print (¨(* o o *)¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨*****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:18) 
-- CODE:
print (¨*****¨)
print (¨(* o o *)¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨*****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:20) 
-- CODE:
print (¨ *****¨)
print (¨(* o o *)¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨ *****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:22) 
-- CODE:
print (¨ *****¨)
print (¨(* o o *)¨)
print (¨ *  ^   *¨)
print (¨ * --- * ¨)
print (¨ ***** ¨)
-- ERROR:
File "XXXX", line 1
    print (¨ *****¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
